--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
     font-size: 24px;
     color: #333;
     margin-bottom: 20px;
-    text-align: center;`
+    text-align: center;
 }
 
 #info-card {
